# pico-as7265x

./: CMakeLists.txt  README.md
examples/: basic_reading.c
include/: as7265x.h
src/: as7265x.c
